<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_card_info"
    android:layout_width="match_parent"
    android:layout_height="335dp"
    android:clickable="false"
    android:elevation="4dp"
    android:visibility="visible"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_card_linea_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/ride_data_label_linea_colectivo"
            android:textColor="@color/colorNegro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_card_title_text_view_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_card_title_text_view_bg" />

        <FrameLayout
            android:id="@+id/fragment_card_title_text_view_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_bg_buttons"
            android:backgroundTint="@color/color505"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toStartOf="@+id/fragment_card_image_close"
            app:layout_constraintStart_toEndOf="@+id/fragment_card_linea_text"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fragment_card_linea_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccentLight"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_card_linea_text"
                app:layout_constraintStart_toEndOf="@+id/fragment_card_linea_text"
                app:layout_constraintTop_toTopOf="@+id/fragment_card_linea_text"
                tools:text="500" />
        </FrameLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_parada_inicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_card_linea_text" />

        <TextView
            android:id="@+id/fragment_card_recorrido_text_value_origin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:textColor="@color/colorGris"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="@+id/imageView1"
            tools:text="Alsina 1111" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_parada_fin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        <TextView
            android:id="@+id/fragment_card_recorrido_text_value_destino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:textColor="@color/colorGris"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="Grl Paz 1111" />

        <View
            android:id="@+id/separador"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorGris"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/fragment_card_algorithm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ride_data_label_algoritmo"
            android:textColor="@color/colorNegro"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separador" />

        <TextView
            android:id="@+id/fragment_card_algorithm_text_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:textColor="@color/colorGris"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_card_algorithm_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@+id/fragment_card_algorithm_text"
            app:layout_constraintTop_toTopOf="@+id/fragment_card_algorithm_text"
            tools:text="Algoritmo nro1" />

        <View
            android:id="@+id/separador2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorGris"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_card_algorithm_text" />

        <TextView
            android:id="@+id/fragment_card_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_buttons"
            android:padding="5dp"
            android:text="@string/ride_data_label_tiempo_viaje"
            android:textColor="@color/colorTravelPredictionHistoryCard"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separador2" />

        <TextView
            android:id="@+id/fragment_card_time_text_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:textColor="@color/colorGris"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_card_time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_card_time_text"
            app:layout_constraintTop_toTopOf="@+id/fragment_card_time_text"
            tools:text="HH:mm:ss" />

        <TextView
            android:id="@+id/fragment_card_distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_bg_buttons"
            android:padding="5dp"
            android:text="@string/ride_data_label_distancia"
            android:textColor="@color/colorTravelPredictionHistoryCard"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_card_time_text" />

        <TextView
            android:id="@+id/fragment_card_distance_text_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:textColor="@color/colorGris"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_card_distance_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_card_distance_text"
            app:layout_constraintTop_toTopOf="@+id/fragment_card_distance_text"
            tools:text="mm mts" />

        <ImageView
            android:id="@+id/fragment_card_image_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_card_title_text_view_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_card_title_text_view_bg" />

        <ProgressBar
            android:id="@+id/fragment_card_image_loading"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_gravity="top"
            android:elevation="1dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
